@@ -16,10 +16,15 @@ import kr.co.programmers.cafe.domain.order.entity.OrderItem;
 import kr.co.programmers.cafe.domain.order.entity.Status;
 import kr.co.programmers.cafe.global.exception.ItemNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -126,32 +131,50 @@ public class OrderService {
                 .zipCode(order.getZipCode())
                 .orderItems(orderItemResponses)
                 .totalPrice(order.getTotalPrice())
+                .orderedAt(order.getOrderedAt())
                 .status(order.getStatus())
                 .build();
     }
 
 
     @Transactional
-    public List<OrderResponse> getAllOrders() {
-        List<Order> orders = orderRepository.findAll();
+    public Page<OrderResponse> getAllOrders(Pageable pageable) {
+        Page<Order> ordersPage = orderRepository.findAll(pageable);
 
-        return orders.stream()
+        return ordersPage.map(order -> OrderResponse.builder()
+                .orderId(order.getId())
+                .email(order.getEmail())
+                .address(order.getAddress())
+                .zipCode(order.getZipCode())
+                .totalPrice(order.getTotalPrice())
+                .status(order.getStatus())
+                .orderItems(order.getOrderItems().stream()
+                        .map(orderItem -> OrderItemResponse.builder()
+                                .name(orderItem.getItem().getName())
+                                .price(orderItem.getItem().getPrice())
+                                .quantity(orderItem.getQuantity())
+                                .build())
+                        .collect(Collectors.toList()))
+                .build());
+    }
+
+    // 목록 단건 조회용
+    @Transactional
+    public Optional<OrderResponse> searchOrder(Long orderId) {
+        return orderRepository.findById(orderId)
                 .map(order -> OrderResponse.builder()
                         .orderId(order.getId())
                         .email(order.getEmail())
                         .address(order.getAddress())
-                        .zipCode(order.getZipCode())
                         .totalPrice(order.getTotalPrice())
                         .status(order.getStatus())
                         .orderItems(order.getOrderItems().stream()
                                 .map(orderItem -> OrderItemResponse.builder()
                                         .name(orderItem.getItem().getName())
-                                        .price(orderItem.getItem().getPrice())
                                         .quantity(orderItem.getQuantity())
                                         .build())
-                                .collect(Collectors.toList()))
-                        .build())
-                .collect(Collectors.toList());
+                                .toList())
+                        .build());
     }
 
     @Transactional
@@ -163,3 +186,4 @@ public class OrderService {
 
 
 }
+
